Add new&update files to EN based on cn190820

--- a/mktcontent/解决方案/solutionTxt/京东云知客.md
+++ b/mktcontent/解决方案/solutionTxt/京东云知客.md
@@ -12,7 +12,7 @@
 		"solution_id":"147"
 	},
 	{
-		"txt":"{\"operator\":\"zhangguoqiang1\",\"floorName\":\"Product Architecture\",\"name\":\"newTab-4\",\"data\":[{\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/b08c54c5-e39d-494a-9ef1-31620094c4d720190808212637.png\",\"showTitle\":\"Zhike Product Architecture\",\"descriptionDetail\":\"In terms of Data Source, support for offline structured data and real-time data. In terms of Data Integration, support for data gateway, use Flume collection log, Kafka collection log, Sqoop offline access, Gobblin as ETL tools. In terms of Data Storage, use HDFS as distributed file system, use HBase as distributed database. In terms of Resource Management, use Yarn for unified resource management and scheduling. In terms of Data Calculation, use Hive, MapReduce and Spark for offline calculation to make\",\"buttons\":{\"name\":\"\",\"link\":\"\",\"classTag\":\"\"}}]}",
+		"txt":"{\"operator\":\"zhangguoqiang1\",\"floorName\":\"Product Architecture\",\"name\":\"newTab-4\",\"data\":[{\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/b08c54c5-e39d-494a-9ef1-31620094c4d720190808212637.png\",\"showTitle\":\"Zhike Product Architecture\",\"descriptionDetail\":\"In terms of Data Source, support for offline structured data and real-time data. In terms of Data Integration, support for data gateway, use Flume collection log, Kafka collection log, Sqoop offline access, Gobblin as ETL tools. In terms of Data Storage, use HDFS as distributed file system, use HBase as distributed database. In terms of Resource Management, use Yarn for unified resource management and scheduling. As for data computation, off-line computation is realized with Hive, MapReduce and Spark and real-time computing is realized through Spark Streaming. As for job scheduling, Oozie serves as the job stream scheduling system.\",\"buttons\":{\"name\":\"\",\"link\":\"\",\"classTag\":\"\"}}]}",
 		"templet":"22",
 		"id":703,
 		"solution_id":"147"
