--- a/mktcontent/解决方案/solutionTxt/在线教育培训解决方案.md
+++ b/mktcontent/解决方案/solutionTxt/在线教育培训解决方案.md
@@ -12,7 +12,7 @@
 		"solution_id":"32"
 	},
 	{
-		"txt":"{\"operator\":\"duanhui5\",\"floorName\":\"典型场景及方案\",\"name\":\"scene\",\"data\":[{\"title\":\"在线教育\",\"sceneDescription\":\"某实体培训机构主要开展IT技能培训业务，校区受限于地理位置和行业竞争炙热化，近年来营收增速较低、利润率直线下降；急需寻找新的利润增长点。\",\"solution\":\"搭建专属网校，开展在线培训业务，实行线上、线下2条业务并行；通过网络直招学习（包含大班课、小班课、在线1对1教学），吸引外地学员付费报名和学习，大幅提升营收和利润；通过线下学员补充网络学习，进一步巩固\",\"selectedProduct\":[{\"name\":\"云主机\",\"url\":\"//www.jdcloud.com/products/cloudhost\"},{\"name\":\"弹性伸缩\",\"url\":\"//www.jdcloud.com/products/as\"},{\"name\":\"负载均衡\",\"url\":\"//www.jdcloud.com/products/loadbalance\"}],\"tmpSelected\":[\"//www.jdcloud.com/products/cloudhost\",\"//www.jdcloud.com/products/as\",\"//www.jdcloud.com/products/loadbalance\"],\"buttons\":{\"name\":\"立即咨询\",\"link\":\"https://chat.jd.com/agile/NDYzMDUw\",\"classTag\":\"xxx\"},\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/62ce4163-768e-4ca8-b12a-c9937c86c7da20180913153325.png\",\"showShade\":false},{\"title\":\"企业内训\",\"sceneDescription\":\"某公司创立2年以来员工已从最初的10余人扩充到200余人并且在全国各地开设了近10个办事处。随着业务快速发展，员工数量将要奔向300人；快速奔跑的3年里公司初级、中级管理者、骨干员工能力短板开始凸显；同时普通员工自身成长的矛盾也开始显露，如何统一思想、凝聚人心？行政部门感到很棘手。\",\"solution\":\"建立企业大学，引入领导力、职场礼仪、专业技能等课程；通过直播和点播的形式，定期组织全公司人员学习；通过实际行动让普通员工、基层管理者切身感受到自己的进步，迅速增强团队整体战斗力。\",\"selectedProduct\":[{\"name\":\"云主机\",\"url\":\"//www.jdcloud.com/products/cloudhost\"},{\"name\":\"对象存储\",\"url\":\"//www.jdcloud.com/products/cloudstorage\"},{\"name\":\"云数据库 MySQL\",\"url\":\"//www.jdcloud.com/products/clouddb\"}],\"tmpSelected\":[\"//www.jdcloud.com/products/cloudhost\",\"//www.jdcloud.com/products/cloudstorage\",\"//www.jdcloud.com/products/clouddb\"],\"buttons\":{\"name\":\"立即咨询\",\"link\":\"https://chat.jd.com/agile/NDYzMDUw\",\"classTag\":\"xxx\"},\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/3bb707be-6d21-4033-ab14-71378542aa9220180913153334.png\",\"showShade\":false},{\"title\":\"高校慕课\",\"sceneDescription\":\"某高校是国内知名的水利院校，拥有10余门国家级精品课程；为了更好地将学校优质课程、师资能力开放给更多学子学习；同时也为了更好地宣传学校品牌，校方决定搭建公开性网络学习平台。\",\"solution\":\"定制专属慕课平台，通过严格的选课、完善的上课计划与在线考试想结合，采用直播加点播的学习方式，保障学生有节奏、有质量地完成学习任务，参加毕业考试。使用大数据手段对学习过程、考试过程和考试结果进行分析，建立多维度的毕业生画像，并有针对性地为学生提供个性化学习辅助资料，帮助学生最大限度掌握知识。\",\"selectedProduct\":[{\"name\":\"云主机\",\"url\":\"//www.jdcloud.com/products/cloudhost\"},{\"name\":\"CDN\",\"url\":\"//www.jdcloud.com/products/cdn\"},{\"name\":\"云数据库 MySQL\",\"url\":\"//www.jdcloud.com/products/clouddb\"}],\"tmpSelected\":[\"//www.jdcloud.com/products/cloudhost\",\"//www.jdcloud.com/products/clouddb\",\"//www.jdcloud.com/products/cdn\"],\"buttons\":{\"name\":\"立即咨询\",\"link\":\"https://chat.jd.com/agile/NDYzMDUw\",\"classTag\":\"\"},\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/5679c9ec-a45d-4639-8182-1ab5fe14f6a120180913153349.png\",\"showShade\":false},{\"title\":\"政府网校\",\"sceneDescription\":\"某地级市经济技术开发区管委会贯彻落实提升公务员队伍建设的政策，为了进一步提升辖区公务员的思想政治觉悟、提高专业业务能力、提升综合素养、培养新时代优秀公务人员，需要一个便捷的学习途径；满足大规模参与、灵活组织和一键考核学习效果。\",\"solution\":\"基于开发区级别建立公务员网络学习平台，通过“精选课程、在线学习、分组讨论、考核评比、学后感”等途径，使得人们建立不断学习的认知，并且在学习中找到乐趣和学有所获。\",\"selectedProduct\":[{\"name\":\"云主机\",\"url\":\"//www.jdcloud.com/products/cloudhost\"},{\"name\":\"云数据库 SQL Server\",\"url\":\"//www.jdcloud.com/products/sqlserver\"},{\"name\":\"专线服务\",\"url\":\"//www.jdcloud.com/products/dc\"}],\"tmpSelected\":[\"//www.jdcloud.com/products/cloudhost\",\"//www.jdcloud.com/products/sqlserver\",\"//www.jdcloud.com/products/dc\"],\"buttons\":{\"name\":\"立即咨询\",\"link\":\"https://chat.jd.com/agile/NDYzMDUw\",\"classTag\":\"\"},\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/b94904f3-e8b8-4992-b186-4bed15dd88c320180913153357.png\",\"showShade\":false},{\"title\":\"园区投融资\",\"sceneDescription\":\"某创业园区是在市政府指导下创立的服务留学归国人才的创业园区，如何更好地帮助创业者与资本市场对接、提升企业发展速度是园区运营方面临的棘手问题。\",\"solution\":\"搭建与“园区创业大讲堂”相关联的“园区投资融资服务平台”，一方面吸收创业者入驻平台，呈现企业发展和核心优势；另一方面邀请当地和业内知名投资机构入驻平台，通过撮合的方式，帮助创业企业更快地发展。\",\"selectedProduct\":[{\"name\":\"云主机\",\"url\":\"//www.jdcloud.com/products/cloudhost\"},{\"name\":\"云数据库 MySQL\",\"url\":\"//www.jdcloud.com/products/clouddb\"},{\"name\":\"弹性伸缩\",\"url\":\"//www.jdcloud.com/products/as\"}],\"tmpSelected\":[\"//www.jdcloud.com/products/cloudhost\",\"//www.jdcloud.com/products/clouddb\",\"//www.jdcloud.com/products/as\"],\"buttons\":{\"name\":\"立即咨询\",\"link\":\"https://chat.jd.com/agile/NDYzMDUw\",\"classTag\":\"\"},\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/0e629ba8-13de-4a55-9565-cca1cfd405b120180913153407.png\",\"showShade\":false}]}",
+		"txt":"{\"operator\":\"duanhui5\",\"floorName\":\"典型场景及方案\",\"name\":\"scene\",\"data\":[{\"title\":\"在线教育\",\"sceneDescription\":\"某实体培训机构主要开展IT技能培训业务，校区受限于地理位置和行业竞争炙热化，近年来营收增速较低、利润率直线下降；急需寻找新的利润增长点。\",\"solution\":\"搭建专属网校，开展在线培训业务，实行线上、线下2条业务并行；通过网络直招学习（包含大班课、小班课、在线1对1教学），吸引外地学员付费报名和学习，大幅提升营收和利润；通过线下学员补充网络学习，进一步巩固\",\"selectedProduct\":[{\"name\":\"云主机\",\"url\":\"//www.jdcloud.com/products/virtual-machines\"},{\"name\":\"弹性伸缩\",\"url\":\"//www.jdcloud.com/products/auto-scaling\"},{\"name\":\"负载均衡\",\"url\":\"//www.jdcloud.com/products/load-balancer\"}],\"tmpSelected\":[\"//www.jdcloud.com/products/cloudhost\",\"//www.jdcloud.com/products/as\",\"//www.jdcloud.com/products/loadbalance\"],\"buttons\":{\"name\":\"立即咨询\",\"link\":\"https://chat.jd.com/agile/NDYzMDUw\",\"classTag\":\"xxx\"},\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/62ce4163-768e-4ca8-b12a-c9937c86c7da20180913153325.png\",\"showShade\":false},{\"title\":\"企业内训\",\"sceneDescription\":\"某公司创立2年以来员工已从最初的10余人扩充到200余人并且在全国各地开设了近10个办事处。随着业务快速发展，员工数量将要奔向300人；快速奔跑的3年里公司初级、中级管理者、骨干员工能力短板开始凸显；同时普通员工自身成长的矛盾也开始显露，如何统一思想、凝聚人心？行政部门感到很棘手。\",\"solution\":\"建立企业大学，引入领导力、职场礼仪、专业技能等课程；通过直播和点播的形式，定期组织全公司人员学习；通过实际行动让普通员工、基层管理者切身感受到自己的进步，迅速增强团队整体战斗力。\",\"selectedProduct\":[{\"name\":\"云主机\",\"url\":\"//www.jdcloud.com/products/virtual-machines\"},{\"name\":\"对象存储\",\"url\":\"//www.jdcloud.com/products/object-storage-service\"},{\"name\":\"云数据库 MySQL\",\"url\":\"//www.jdcloud.com/products/jcs-for-mysql\"}],\"tmpSelected\":[\"//www.jdcloud.com/products/cloudhost\",\"//www.jdcloud.com/products/cloudstorage\",\"//www.jdcloud.com/products/clouddb\"],\"buttons\":{\"name\":\"立即咨询\",\"link\":\"https://chat.jd.com/agile/NDYzMDUw\",\"classTag\":\"xxx\"},\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/3bb707be-6d21-4033-ab14-71378542aa9220180913153334.png\",\"showShade\":false},{\"title\":\"高校慕课\",\"sceneDescription\":\"某高校是国内知名的水利院校，拥有10余门国家级精品课程；为了更好地将学校优质课程、师资能力开放给更多学子学习；同时也为了更好地宣传学校品牌，校方决定搭建公开性网络学习平台。\",\"solution\":\"定制专属慕课平台，通过严格的选课、完善的上课计划与在线考试想结合，采用直播加点播的学习方式，保障学生有节奏、有质量地完成学习任务，参加毕业考试。使用大数据手段对学习过程、考试过程和考试结果进行分析，建立多维度的毕业生画像，并有针对性地为学生提供个性化学习辅助资料，帮助学生最大限度掌握知识。\",\"selectedProduct\":[{\"name\":\"云主机\",\"url\":\"//www.jdcloud.com/products/virtual-machines\"},{\"name\":\"CDN\",\"url\":\"//www.jdcloud.com/products/cdn\"},{\"name\":\"云数据库 MySQL\",\"url\":\"//www.jdcloud.com/products/jcs-for-mysql\"}],\"tmpSelected\":[\"//www.jdcloud.com/products/cloudhost\",\"//www.jdcloud.com/products/clouddb\",\"//www.jdcloud.com/products/cdn\"],\"buttons\":{\"name\":\"立即咨询\",\"link\":\"https://chat.jd.com/agile/NDYzMDUw\",\"classTag\":\"\"},\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/5679c9ec-a45d-4639-8182-1ab5fe14f6a120180913153349.png\",\"showShade\":false},{\"title\":\"政府网校\",\"sceneDescription\":\"某地级市经济技术开发区管委会贯彻落实提升公务员队伍建设的政策，为了进一步提升辖区公务员的思想政治觉悟、提高专业业务能力、提升综合素养、培养新时代优秀公务人员，需要一个便捷的学习途径；满足大规模参与、灵活组织和一键考核学习效果。\",\"solution\":\"基于开发区级别建立公务员网络学习平台，通过“精选课程、在线学习、分组讨论、考核评比、学后感”等途径，使得人们建立不断学习的认知，并且在学习中找到乐趣和学有所获。\",\"selectedProduct\":[{\"name\":\"云主机\",\"url\":\"//www.jdcloud.com/products/virtual-machines\"},{\"name\":\"云数据库 SQL Server\",\"url\":\"//www.jdcloud.com/products/jcs-for-sql-server\"},{\"name\":\"专线服务\",\"url\":\"//www.jdcloud.com/products/direct-connection\"}],\"tmpSelected\":[\"//www.jdcloud.com/products/cloudhost\",\"//www.jdcloud.com/products/sqlserver\",\"//www.jdcloud.com/products/dc\"],\"buttons\":{\"name\":\"立即咨询\",\"link\":\"https://chat.jd.com/agile/NDYzMDUw\",\"classTag\":\"\"},\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/b94904f3-e8b8-4992-b186-4bed15dd88c320180913153357.png\",\"showShade\":false},{\"title\":\"园区投融资\",\"sceneDescription\":\"某创业园区是在市政府指导下创立的服务留学归国人才的创业园区，如何更好地帮助创业者与资本市场对接、提升企业发展速度是园区运营方面临的棘手问题。\",\"solution\":\"搭建与“园区创业大讲堂”相关联的“园区投资融资服务平台”，一方面吸收创业者入驻平台，呈现企业发展和核心优势；另一方面邀请当地和业内知名投资机构入驻平台，通过撮合的方式，帮助创业企业更快地发展。\",\"selectedProduct\":[{\"name\":\"云主机\",\"url\":\"//www.jdcloud.com/products/virtual-machines\"},{\"name\":\"云数据库 MySQL\",\"url\":\"//www.jdcloud.com/products/jcs-for-mysql\"},{\"name\":\"弹性伸缩\",\"url\":\"//www.jdcloud.com/products/auto-scaling\"}],\"tmpSelected\":[\"//www.jdcloud.com/products/cloudhost\",\"//www.jdcloud.com/products/clouddb\",\"//www.jdcloud.com/products/as\"],\"buttons\":{\"name\":\"立即咨询\",\"link\":\"https://chat.jd.com/agile/NDYzMDUw\",\"classTag\":\"\"},\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/0e629ba8-13de-4a55-9565-cca1cfd405b120180913153407.png\",\"showShade\":false}]}",
 		"templet":"41",
 		"id":161,
 		"solution_id":"32"
