--- a/mktcontent/解决方案/solutionTxt/企业级移动研发平台.md
+++ b/mktcontent/解决方案/solutionTxt/企业级移动研发平台.md
@@ -1,54 +1,54 @@
 [
 	{
-		"txt":"{\"operator\":\"zhouyan229\",\"floorName\":\"banner\",\"name\":\"banner\",\"data\":[{\"title\":\"企业级移动研发平台\",\"description\":\"基于京东商城在移动互联网行业的技术积淀，秉承“开放赋能”的合作理念，为移动研发提供一站式全流程解决方案，帮助企业低成本、高效率地构建稳定可靠的APP，助力业务移动化转型升级。\",\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/2555f864-37aa-465b-9a8f-acd96d60baf720190809194358.png\",\"backgroundColor\":\"#101c60\",\"buttonMetas\":[],\"tagMetas\":[]}]}",
+		"txt":"{\"operator\":\"yangxun11\",\"floorName\":\"banner\",\"name\":\"banner\",\"data\":[{\"title\":\"企业级移动研发平台\",\"description\":\"基于京东商城在移动互联网行业的技术积淀，秉承“开放赋能”的合作理念，为移动研发提供一站式全流程解决方案，帮助企业低成本、高效率地构建稳定可靠的APP，助力业务移动化转型升级。\",\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/2555f864-37aa-465b-9a8f-acd96d60baf720190809194358.png\",\"backgroundColor\":\"#101c60\",\"buttonMetas\":[],\"tagMetas\":[]}]}",
 		"templet":"11",
 		"id":721,
 		"solution_id":"151"
 	},
 	{
-		"txt":"{\"operator\":\"zhouyan229\",\"floorName\":\"价值优势\",\"name\":\"advantage\",\"data\":[{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/797c21ac-a32a-4f76-9f9f-a90a5f99b40420190809194433.png\",\"title\":\"全生命周期技术支撑\",\"description\":\"包含需求、开发、测试、运维、运营5大领域，移动研发生命周期全覆盖\"},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/d44205bf-2eb2-4ed1-abda-801f09f60e6520190809194501.png\",\"title\":\"高效稳定\",\"description\":\"经历京东618、双11的亿级流量考验，完美应对大流量高并发场景\\n\"},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/2b2354dd-f1d7-472b-b53b-908aecfdc8d520190809194531.png\",\"title\":\"灵活便捷\",\"description\":\"丰富的基础与业务组件，开箱即用灵活便捷，实现积木式快速搭建App\"},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/7bab0977-c494-47fc-a217-2df6bb9b2edf20190809194650.png\",\"title\":\"京东黑科技\",\"description\":\"源于京东商城的黑科技：崩溃分析，精准定位崩溃代码模块；热修复，无需发版快速解决线上问题\"}]}",
+		"txt":"{\"operator\":\"yangxun11\",\"floorName\":\"价值优势\",\"name\":\"advantage\",\"data\":[{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/797c21ac-a32a-4f76-9f9f-a90a5f99b40420190809194433.png\",\"title\":\"全生命周期技术支撑\",\"description\":\"包含需求、开发、测试、运维、运营5大领域，移动研发生命周期全覆盖\"},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/d44205bf-2eb2-4ed1-abda-801f09f60e6520190809194501.png\",\"title\":\"高效稳定\",\"description\":\"经历京东618、双11的亿级流量考验，完美应对大流量高并发场景\"},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/2b2354dd-f1d7-472b-b53b-908aecfdc8d520190809194531.png\",\"title\":\"灵活便捷\",\"description\":\"丰富的基础与业务组件，开箱即用灵活便捷，实现积木式快速搭建App\"},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/7bab0977-c494-47fc-a217-2df6bb9b2edf20190809194650.png\",\"title\":\"京东黑科技\",\"description\":\"源于京东商城的黑科技：崩溃分析，精准定位崩溃代码模块；热修复，无需发版快速解决线上问题\"}]}",
 		"templet":"51",
 		"id":722,
 		"solution_id":"151"
 	},
 	{
-		"txt":"{\"operator\":\"zhouyan229\",\"floorName\":\"核心产品功能\",\"name\":\"description-1\",\"data\":[{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/c2fbc3b1-baaa-4fef-ac12-7ff4d5adb7ba20190809194711.png\",\"title\":\"开发提效\",\"description\":\"原生、跨端、H5、小程序4大开发框架，成熟稳定功能强大，有效提高开发协作效率\",\"subDescriptions\":[{\"descriptionText\":\"原生开发框架 \"},{\"descriptionText\":\"跨端开发框架\"},{\"descriptionText\":\"H5开发框架\"},{\"descriptionText\":\"小程序开发框架\"}]},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/66343f18-e991-4b2e-8674-0553fbeaa70220190809194813.png\",\"title\":\"Dev&Ops\",\"description\":\"打通流程壁垒，消除合作阻碍，聚焦业务价值的持续交付\",\"subDescriptions\":[{\"descriptionText\":\"静态代码扫描\"},{\"descriptionText\":\"接口规范管理 \"},{\"descriptionText\":\"持续集成交付\"},{\"descriptionText\":\"应用发布与热修复\"}]},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/e76ad741-b04c-4087-be19-38cb3da683a120190809194908.png\",\"title\":\"性能提升\",\"description\":\"性能指标实时监控，异常数据及时告警，问题定位快速精准，增强APP稳定性，提升用户体验\",\"subDescriptions\":[{\"descriptionText\":\"API网关 \"},{\"descriptionText\":\"HTTPDNS \"},{\"descriptionText\":\"性能监控 \"},{\"descriptionText\":\"崩溃分析\"}]},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/225e8812-5753-4be3-b853-b5d7958f018d20190809195012.png\",\"title\":\"智能运营\",\"description\":\"基于自动化、大数据实现精准化营销与用户互动，有效降低运营成本，提升用户活跃度与转化率\",\"subDescriptions\":[{\"descriptionText\":\"消息推送 \"},{\"descriptionText\":\"视频播放 \"},{\"descriptionText\":\"用户反馈 \"},{\"descriptionText\":\"智能客服\"}]}]}",
+		"txt":"{\"operator\":\"yangxun11\",\"floorName\":\"核心产品功能\",\"name\":\"description-1\",\"data\":[{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/c2fbc3b1-baaa-4fef-ac12-7ff4d5adb7ba20190809194711.png\",\"title\":\"开发提效\",\"description\":\"原生、跨端、H5、小程序4大开发框架，成熟稳定功能强大，有效提高开发协作效率\",\"subDescriptions\":[{\"descriptionText\":\"原生开发框架 \"},{\"descriptionText\":\"跨端开发框架\"},{\"descriptionText\":\"H5开发框架\"},{\"descriptionText\":\"小程序开发框架\"}]},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/66343f18-e991-4b2e-8674-0553fbeaa70220190809194813.png\",\"title\":\"Dev&Ops\",\"description\":\"打通流程壁垒，消除合作阻碍，聚焦业务价值的持续交付\",\"subDescriptions\":[{\"descriptionText\":\"静态代码扫描\"},{\"descriptionText\":\"接口规范管理 \"},{\"descriptionText\":\"持续集成交付\"},{\"descriptionText\":\"应用发布与热修复\"}]},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/e76ad741-b04c-4087-be19-38cb3da683a120190809194908.png\",\"title\":\"性能提升\",\"description\":\"性能指标实时监控，异常数据及时告警，问题定位快速精准，增强APP稳定性，提升用户体验\",\"subDescriptions\":[{\"descriptionText\":\"API网关 \"},{\"descriptionText\":\"HTTPDNS \"},{\"descriptionText\":\"性能监控 \"},{\"descriptionText\":\"崩溃分析\"}]},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/225e8812-5753-4be3-b853-b5d7958f018d20190809195012.png\",\"title\":\"智能运营\",\"description\":\"基于自动化、大数据实现精准化营销与用户互动，有效降低运营成本，提升用户活跃度与转化率\",\"subDescriptions\":[{\"descriptionText\":\"消息推送 \"},{\"descriptionText\":\"视频播放 \"},{\"descriptionText\":\"用户反馈 \"},{\"descriptionText\":\"智能客服\"}]}]}",
 		"templet":"21",
 		"id":723,
 		"solution_id":"151"
 	},
 	{
-		"txt":"{\"operator\":\"zhouyan229\",\"floorName\":\"典型应用场景\",\"name\":\"scene\",\"data\":[{\"title\":\"全新APP开发\",\"sceneDescription\":\"传统模式下，从0到1开发APP需要耗费较大的资源与时间投入；采用APP开发套件，包含经亿级用户验证的成熟开发框架和金融、电商等种类丰富的多场景基础与业务组件，1天即可快速构建高质量APP。\",\"solution\":\"原生/H5开发解决方案 + 应用发布\",\"selectedProduct\":[],\"tmpSelected\":[],\"buttons\":{\"name\":\"\",\"link\":\"\",\"classTag\":\"\"},\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/ed3e6d25-277e-498f-8cd6-a24d9e8c496120190809195143.png\",\"showShade\":false},{\"title\":\"APP持续交付\",\"sceneDescription\":\"传统模式下，客户端开发周期长，团队协同成本高，版本更新发布缓慢；采用模块化开发模式与辅助工具，提升多团队开发协作效率，并打通应用构建、安全扫描加固、应用发布等流程，实现持续构建交付，不断提高版本交付效率和质量。\",\"solution\":\"接口管理 + 代码扫描 + 持续集成 + 应用发布\",\"selectedProduct\":[],\"tmpSelected\":[],\"buttons\":{\"name\":\"\",\"link\":\"\",\"classTag\":\"\"},\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/e53af53b-f901-44df-87f9-7b8b7293031320190809195215.png\",\"showShade\":false},{\"title\":\"跨平台开发\",\"sceneDescription\":\"传统模式下，需分别储备Android、iOS、Web、小程序等多个研发团队，资源投入巨大；采用跨端开发解决方案，通过RN、Flutter双引擎及小程序双向转换引擎，既可实现企业内多APP的业务复用，又可双向打通APP与微信生态。\",\"solution\":\"跨端开发解决方案 + 性能监控\",\"selectedProduct\":[],\"tmpSelected\":[],\"buttons\":{\"name\":\"\",\"link\":\"\",\"classTag\":\"\"},\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/9b766d2b-e2cf-42cc-b22c-01aecfdcd51620190809195247.png\",\"showShade\":false},{\"title\":\"线上bug修复\",\"sceneDescription\":\"传统模式下，App发生线上bug需进行紧急修复时，要进行换包和重新发版，流程繁琐耗时；采用移动热修复服务，实现补丁包的随时发布，通过修复包与基准包的差异化对比，自动向客户端下发补丁包，用户全程无感知。\",\"solution\":\"热修复 + 云端配置\",\"selectedProduct\":[],\"tmpSelected\":[],\"buttons\":{\"name\":\"\",\"link\":\"\",\"classTag\":\"\"},\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/e895dd5b-12f3-43ef-9c4f-6a514724243720190809195309.png\",\"showShade\":false}]}",
+		"txt":"{\"operator\":\"yangxun11\",\"floorName\":\"典型应用场景\",\"name\":\"scene\",\"data\":[{\"title\":\"全新APP开发\",\"sceneDescription\":\"传统模式下，从0到1开发APP需要耗费较大的资源与时间投入；采用APP开发套件，包含经亿级用户验证的成熟开发框架和金融、电商等种类丰富的多场景基础与业务组件，1天即可快速构建高质量APP。\",\"solution\":\"原生/H5开发解决方案 + 应用发布\",\"selectedProduct\":[],\"tmpSelected\":[],\"buttons\":{\"name\":\"\",\"link\":\"\",\"classTag\":\"\"},\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/ed3e6d25-277e-498f-8cd6-a24d9e8c496120190809195143.png\",\"showShade\":false},{\"title\":\"APP持续交付\",\"sceneDescription\":\"传统模式下，客户端开发周期长，团队协同成本高，版本更新发布缓慢；采用模块化开发模式与辅助工具，提升多团队开发协作效率，并打通应用构建、安全扫描加固、应用发布等流程，实现持续构建交付，不断提高版本交付效率和质量。\",\"solution\":\"接口管理 + 代码扫描 + 持续集成 + 应用发布\",\"selectedProduct\":[],\"tmpSelected\":[],\"buttons\":{\"name\":\"\",\"link\":\"\",\"classTag\":\"\"},\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/e53af53b-f901-44df-87f9-7b8b7293031320190809195215.png\",\"showShade\":false},{\"title\":\"跨平台开发\",\"sceneDescription\":\"传统模式下，需分别储备Android、iOS、Web、小程序等多个研发团队，资源投入巨大；采用跨端开发解决方案，通过RN、Flutter双引擎及小程序双向转换引擎，既可实现企业内多APP的业务复用，又可双向打通APP与微信生态。\",\"solution\":\"跨端开发解决方案 + 性能监控\",\"selectedProduct\":[],\"tmpSelected\":[],\"buttons\":{\"name\":\"\",\"link\":\"\",\"classTag\":\"\"},\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/9b766d2b-e2cf-42cc-b22c-01aecfdcd51620190809195247.png\",\"showShade\":false},{\"title\":\"线上bug修复\",\"sceneDescription\":\"传统模式下，App发生线上bug需进行紧急修复时，要进行换包和重新发版，流程繁琐耗时；采用移动热修复服务，实现补丁包的随时发布，通过修复包与基准包的差异化对比，自动向客户端下发补丁包，用户全程无感知。\",\"solution\":\"热修复 + 云端配置\",\"selectedProduct\":[],\"tmpSelected\":[],\"buttons\":{\"name\":\"\",\"link\":\"\",\"classTag\":\"\"},\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/e895dd5b-12f3-43ef-9c4f-6a514724243720190809195309.png\",\"showShade\":false}]}",
 		"templet":"41",
 		"id":724,
 		"solution_id":"151"
 	},
 	{
-		"txt":"{\"operator\":\"zhouyan229\",\"floorName\":\"平台架构\",\"name\":\"architecture-1\",\"data\":[{\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/9fba2478-34d7-4195-9784-b3524f7bff8d20190809195333.jpg\",\"title\":\"架构描述\",\"descriptionDetail\":\"源于“手机京东”APP研发的最佳实践，在实现多业务闭环的前提下，解决成本、质量、效率、标准问题，助力多团队APP研发的质量提升、成本节约。\",\"buttons\":{\"name\":\"\",\"link\":\"\",\"classTag\":\"\"}}]}",
+		"txt":"{\"operator\":\"yangxun11\",\"floorName\":\"平台架构\",\"name\":\"architecture-1\",\"data\":[{\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/9fba2478-34d7-4195-9784-b3524f7bff8d20190809195333.jpg\",\"title\":\"架构描述\",\"descriptionDetail\":\"源于“手机京东”APP研发的最佳实践，在实现多业务闭环的前提下，解决成本、质量、效率、标准问题，助力多团队APP研发的质量提升、成本节约。\",\"buttons\":{\"name\":\"\",\"link\":\"\",\"classTag\":\"\"}}]}",
 		"templet":"31",
 		"id":725,
 		"solution_id":"151"
 	},
 	{
-		"txt":"{\"operator\":\"zhouyan229\",\"floorName\":\"产品推荐\",\"name\":\"recommend\",\"data\":[{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/8744319a-b85c-43d1-b5a2-db97e07c76e820190809195419.png\",\"title\":\"崩溃分析系统\",\"description\":\"1. 实时监控APP的崩溃信息，精准定位崩溃问题模块； 2. 支持监控指标自定义配置，及时告警突发崩溃状况； 3. 支持智能分发BUG问题，自动关联相关责任开发者； 4. 支持监控用户自定义异常，灵活导出异常监控数据；\",\"explain\":\"\",\"buttons\":{\"name\":\"\",\"link\":\"\",\"classTag\":\"\"}},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/aab8f39b-8835-4874-bbc4-75fb128d473220190809195629.png\",\"title\":\"性能监控系统\",\"description\":\"1. 多方案数据监控与采集，支持异常告警与报告输出；\\n2. 版本、机型、网络、地域等维度灵活控制数据上报；\\n3. 开发者可自由选择订阅监控数据，自定义数据分析；\\n4. 性能数据趋势分析，全方面定位线上用户性能问题；\",\"explain\":\"\",\"buttons\":{\"name\":\"\",\"link\":\"\",\"classTag\":\"\"}},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/117eb2bf-0347-4bb2-9482-2dd391cfa89720190809200037.png\",\"title\":\"应用发布系统\",\"description\":\"1. 提供移动APP安装包发布阶段的一体化服务与支持；\\n2. 基于官方 Test Flight 方案进行深度定制，稳定可靠；\\n3. 支持多种策略的应用灰度发布、普通/强制升级功能；\\n4. 及时同步数据信息，实时查询升级用户的数据情况；\",\"explain\":\"\",\"buttons\":{\"name\":\"\",\"link\":\"\",\"classTag\":\"\"}}]}",
+		"txt":"{\"operator\":\"yangxun11\",\"floorName\":\"产品推荐\",\"name\":\"recommend\",\"data\":[{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/8744319a-b85c-43d1-b5a2-db97e07c76e820190809195419.png\",\"title\":\"崩溃分析系统\",\"description\":\"1. 实时监控 APP 的崩溃信息，精准定位崩溃问题模块； 2. 支持监控指标自定义配置，及时告警突发崩溃状况； 3. 支持智能分发BUG问题，自动关联相关责任开发者； 4. 支持监控用户自定义异常，灵活导出异常监控数据；\",\"explain\":\"\",\"buttons\":{\"name\":\"\",\"link\":\"\",\"classTag\":\"\"}},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/aab8f39b-8835-4874-bbc4-75fb128d473220190809195629.png\",\"title\":\"性能监控系统\",\"description\":\"1. 多方案数据监控与采集，支持异常告警与报告输出；  2. 版本、机型、网络、地域等维度灵活控制数据上报；  3. 开发者可自由选择订阅监控数据，自定义数据分析；  4. 性能数据趋势分析，全方面定位线上用户性能问题；\",\"explain\":\"\",\"buttons\":{\"name\":\"\",\"link\":\"\",\"classTag\":\"\"}},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/117eb2bf-0347-4bb2-9482-2dd391cfa89720190809200037.png\",\"title\":\"应用发布系统\",\"description\":\"1. 提供移动 APP 安装包发布阶段的一体化服务与支持；2. 基于官方 Test Flight 方案进行深度定制，稳定可靠；3. 支持多种策略的应用灰度发布、普通/强制升级功能；4. 及时同步数据信息，实时查询升级用户的数据情况；\",\"explain\":\"\",\"buttons\":{\"name\":\"\",\"link\":\"\",\"classTag\":\"\"}}]}",
 		"templet":"71",
 		"id":726,
 		"solution_id":"151"
 	},
 	{
-		"txt":"{\"operator\":\"zhouyan229\",\"floorName\":\"合作案例\",\"name\":\"partners\",\"data\":[{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/7074598f-d5c3-49a1-b1ce-42c73bafc7be20190809200514.png\",\"name\":\"京东拼购\",\"sketch\":\"京东旗下的社交拼购电商平台\",\"detailDescription\":\"合作方案： 以原生解决方案提供的开发框架与套件为基础，使用配套 Webview、OpenApp 等框架能力，以及登录、分享等 10+ 个原生组件，产品研发过程累计节省人员投入 364 人天，保证了拼购 App 在 2 个月内实现从 0 到 1 的上线发布。\"},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/68f3b917-eb71-4488-bd17-dbe0912645f420190809200543.png\",\"name\":\"京东万家\",\"sketch\":\"面向线下门店的移动端管理工具\",\"detailDescription\":\"合作方案： 针对线下门店的业务场景和实际诉求，通过接入电商黄金流程，快速实现了由京东商城嵌入式H5页面到原生接入的改变和业务整合；同时，通过接入成熟的基础组件和业务组件，大幅提升了业务需求响应效率。\"},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/8ff9009a-db16-4dc0-8541-ab6f0667480a20190809200608.png\",\"name\":\"山姆会员商店\",\"sketch\":\"沃尔玛旗下高端会员制商店\",\"detailDescription\":\"合作方案： 通过基础组件对Sam App进行优化和升级：替换原有扫一扫、消息推送等组件，增强业务稳定性与高可用性；接入崩溃分析、性能监控等，完成代码框架升级，持续优化用户体验。\"},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/b0093f45-fc0a-486c-bc57-db25c49d1e9d20190809200640.png\",\"name\":\"精准健康\",\"sketch\":\"打造“健康管理+健康购物”的一站式生活方式\",\"detailDescription\":\"合作方案： 借鉴拼购APP方案的实施经验，使用开发套件提供的原生框架及组件能力，仅花1人天迅速完成组件迁移，整体研发人员投入从260人天下降到32.5人天，效率提升85%。\"}]}",
+		"txt":"{\"operator\":\"yangxun11\",\"floorName\":\"合作案例\",\"name\":\"partners\",\"data\":[{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/7074598f-d5c3-49a1-b1ce-42c73bafc7be20190809200514.png\",\"name\":\"京东拼购\",\"sketch\":\"京东旗下的社交拼购电商平台\",\"detailDescription\":\"合作方案： 以原生解决方案提供的开发框架与套件为基础，使用配套 Webview、OpenApp 等框架能力，以及登录、分享等 10+ 个原生组件，产品研发过程累计节省人员投入 364 人天，保证了拼购 App 在 2 个月内实现从 0 到 1 的上线发布。\"},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/68f3b917-eb71-4488-bd17-dbe0912645f420190809200543.png\",\"name\":\"京东万家\",\"sketch\":\"面向线下门店的移动端管理工具\",\"detailDescription\":\"合作方案： 针对线下门店的业务场景和实际诉求，通过接入电商黄金流程，快速实现了由京东商城嵌入式H5页面到原生接入的改变和业务整合；同时，通过接入成熟的基础组件和业务组件，大幅提升了业务需求响应效率。\"},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/8ff9009a-db16-4dc0-8541-ab6f0667480a20190809200608.png\",\"name\":\"山姆会员商店\",\"sketch\":\"沃尔玛旗下高端会员制商店\",\"detailDescription\":\"合作方案： 通过基础组件对Sam App进行优化和升级：替换原有扫一扫、消息推送等组件，增强业务稳定性与高可用性；接入崩溃分析、性能监控等，完成代码框架升级，持续优化用户体验。\"},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/b0093f45-fc0a-486c-bc57-db25c49d1e9d20190809200640.png\",\"name\":\"精准健康\",\"sketch\":\"打造“健康管理+健康购物”的一站式生活方式\",\"detailDescription\":\"合作方案： 借鉴拼购APP方案的实施经验，使用开发套件提供的原生框架及组件能力，仅花1人天迅速完成组件迁移，整体研发人员投入从260人天下降到32.5人天，效率提升85%。\"}]}",
 		"templet":"81",
 		"id":727,
 		"solution_id":"151"
 	},
 	{
-		"txt":"{\"operator\":\"zhouyan229\",\"floorName\":\"客户问答\",\"name\":\"cases-1\",\"data\":[{\"cases\":[{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/ebc59b2b-c754-4314-bff3-bb996afae53b20190809200724.png\",\"title\":\"接口文档混乱，人工管理效率低，怎么办？\",\"sketch\":\"“接口管理系统”提供统一的自动化接口管理与查阅平台，告别手工形式交付接口文档。\",\"linkUrl\":\"https://www.jdcloud.com/cn/solutions/emop\",\"linkClassTag\":\"1\"},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/68898c46-8dc0-4d99-83f4-f06afc9df9e120190809200801.png\",\"title\":\"代码风格千人千面，规范难执行，怎么办？\",\"sketch\":\"“代码扫描系统”边写边扫，及时发现编码违约、质量缺陷、安全漏洞，提升编码质量。\",\"linkUrl\":\"https://www.jdcloud.com/cn/solutions/emop\",\"linkClassTag\":\"1\"},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/7dfac812-50a1-4e9b-9ac6-0f1149862ee420190809200819.png\",\"title\":\"流量太大扛不住，接口恶意被刷，怎么办？\",\"sketch\":\"“API网关系统”提供精细化流控、鉴权认证、协议转换等，帮你轻松应对告别烦恼。\",\"linkUrl\":\"https://www.jdcloud.com/cn/solutions/emop\",\"linkClassTag\":\"1\"},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/d877da5b-d035-4d29-a96d-6ed9dad4180020190809200834.png\",\"title\":\"希望进行平台功能体验，怎么办？ \",\"sketch\":\"可通过“联系我们”申请平台功能体验权限。\",\"linkUrl\":\"https://www.jdcloud.com/cn/solutions/emop\",\"linkClassTag\":\"1\"},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/97309b5c-0033-4061-bb96-3436bfc0362420190809200945.png\",\"title\":\"希望单独使用某一个或几个产品，怎么办？\",\"sketch\":\"平台各服务高度解耦，可根据用户需求自由组合与输出。\",\"linkUrl\":\"https://www.jdcloud.com/cn/solutions/emop\",\"linkClassTag\":\"1\"},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/399d91b2-9c39-4885-a0c0-d3eefd33551520190809201030.png\",\"title\":\"希望部署至私有云环境，怎么办？\",\"sketch\":\"平台高度兼容复杂基础环境，轻松实现私有云环境部署。\",\"linkUrl\":\"https://www.jdcloud.com/cn/solutions/emop\",\"linkClassTag\":\"1\"}],\"buttons\":{\"name\":\"\",\"link\":\"\",\"classTag\":\"\"}}]}",
+		"txt":"{\"operator\":\"yangxun11\",\"floorName\":\"客户问答\",\"name\":\"cases-1\",\"data\":[{\"cases\":[{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/ebc59b2b-c754-4314-bff3-bb996afae53b20190809200724.png\",\"title\":\"接口文档混乱，人工管理效率低，怎么办？\",\"sketch\":\"“接口管理系统”提供统一的自动化接口管理与查阅平台，告别手工形式交付接口文档。\",\"linkUrl\":\"https://www.jdcloud.com/cn/solutions/emop\",\"linkClassTag\":\"1\"},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/68898c46-8dc0-4d99-83f4-f06afc9df9e120190809200801.png\",\"title\":\"代码风格千人千面，规范难执行，怎么办？\",\"sketch\":\"“代码扫描系统”边写边扫，及时发现编码违约、质量缺陷、安全漏洞，提升编码质量。\",\"linkUrl\":\"https://www.jdcloud.com/cn/solutions/emop\",\"linkClassTag\":\"1\"},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/7dfac812-50a1-4e9b-9ac6-0f1149862ee420190809200819.png\",\"title\":\"流量太大扛不住，接口恶意被刷，怎么办？\",\"sketch\":\"“API网关系统”提供精细化流控、鉴权认证、协议转换等，帮你轻松应对告别烦恼。\",\"linkUrl\":\"https://www.jdcloud.com/cn/solutions/emop\",\"linkClassTag\":\"1\"},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/d877da5b-d035-4d29-a96d-6ed9dad4180020190809200834.png\",\"title\":\"希望进行平台功能体验，怎么办？ \",\"sketch\":\"可通过“联系我们”申请平台功能体验权限。\",\"linkUrl\":\"https://www.jdcloud.com/cn/solutions/emop\",\"linkClassTag\":\"1\"},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/97309b5c-0033-4061-bb96-3436bfc0362420190809200945.png\",\"title\":\"希望单独使用某一个或几个产品，怎么办？\",\"sketch\":\"平台各服务高度解耦，可根据用户需求自由组合与输出。\",\"linkUrl\":\"https://www.jdcloud.com/cn/solutions/emop\",\"linkClassTag\":\"1\"},{\"showShade\":false,\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/399d91b2-9c39-4885-a0c0-d3eefd33551520190809201030.png\",\"title\":\"希望部署至私有云环境，怎么办？\",\"sketch\":\"平台高度兼容复杂基础环境，轻松实现私有云环境部署。\",\"linkUrl\":\"https://www.jdcloud.com/cn/solutions/emop\",\"linkClassTag\":\"1\"}],\"buttons\":{\"name\":\"\",\"link\":\"\",\"classTag\":\"\"}}]}",
 		"templet":"91",
 		"id":728,
 		"solution_id":"151"
 	},
 	{
-		"txt":"{\"operator\":\"zhouyan229\",\"floorName\":\"联系我们\",\"name\":\"operating\",\"data\":[{\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/d2450577-0fbe-47bd-825a-92f8cfad875b20190809201148.jpg\",\"operatingText\":\"\",\"operatingLink\":\"\",\"operatingClasstag\":\"\"}]}",
+		"txt":"{\"operator\":\"yangxun11\",\"floorName\":\"联系我们\",\"name\":\"operating\",\"data\":[{\"imageUrl\":\"//jdcloud-portal.oss.cn-north-1.jcloudcs.com/www.jcloud.com/d2450577-0fbe-47bd-825a-92f8cfad875b20190809201148.jpg\",\"operatingText\":\"\",\"operatingLink\":\"\",\"operatingClasstag\":\"\"}]}",
 		"templet":"101",
 		"id":729,
 		"solution_id":"151"
